--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-md bg-personalizado f">
             <div class="container-fluid">
-                <img  class="nav-log" src="../assets/img/logocirculo1.jpg" alt="">
+                <img  class="nav-log" src="../img/logocirculo1.jpg" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
