--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -67,20 +67,20 @@
         <!-- 3 articulos -->
         <section class="cards">
             <article class="card-body">
-                <img src="../img/uña17.jpeg" alt="uña16">
+                <img class="img" src="../img/uña17.jpeg" alt="uña16">
                 <h2>Esmaltado semipermanente</h2>
                 <p>Obtén uñas perfectamente esmaltadas que durarán semanas sin astillarse ni perder el brillo.</p>
             </article>
 
 
             <article class="card-body">
-                <img src="../img/uña15.jpg" alt="uña15">
+                <img class="img" src="../img/uña15.jpg" alt="uña15">
                 <h2>Kapping Gel</h2>
                 <p>Un sistema de gel especializado para brindar a tus uñas una protección adicional y un acabado brillante.</p> 
             </article>
 
             <article class="card-body">
-                <img src="../img/uña3.jpg" alt="uña3">
+                <img class="img" src="../img/uña3.jpg" alt="uña3">
                 <h2> Soft Gel</h2>
                 <p>  Se trata de unos tips fabricados con gel que cubren la uña. Se adhieren con una base permanente y se curan con lámpara led.</p> 
             </article>
