Antes de la entrega revise si le faltaban comentarios y si estaba todo ordenado

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <!-- inicio de encabezado -->
 
     <header>
+        <!-- nav -->
         <nav class="navbar navbar-expand-md bg-personalizado f">
             <div class="container-fluid">
                 <img  class="nav-log" src="img/logocirculo1.jpg" alt="">
@@ -52,7 +53,6 @@
                 </div>
             </div>
         </nav>
-
     </header>
 <!-- fin de encabezado -->
 
@@ -100,7 +100,6 @@
 
 
 <!-- inicio de pie de página-->
-
 
     <footer>
         <article class="ifooter" >
