--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -18,9 +18,10 @@
 <!-- inicio de encabezado -->
 
     <header>
-    <nav class="navbar navbar-expand-md bg-personalizado f">
-        <div class="container-fluid">
-            <img  class="nav-log" src="../img/logocirculo1.jpg" alt="">
+        <!-- nav-->
+        <nav class="navbar navbar-expand-md bg-personalizado f">
+            <div class="container-fluid">
+                <img  class="nav-log" src="../img/logocirculo1.jpg" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,7 +43,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
-                        
                     </ul>
                 </div>
             </div>
