--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -20,6 +20,7 @@
 
 <!-- inicio de encabezado -->
 <header>
+    <!-- nav -->
     <nav class="navbar navbar-expand-md bg-personalizado f">
         <div class="container-fluid">
             <img  class="nav-log" src="../img/logocirculo1.jpg" alt="">
