--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -20,6 +20,7 @@
     <!-- inicio de encabezado -->
 
     <header>
+        <!-- nav -->
         <nav class="navbar navbar-expand-md bg-personalizado f">
             <div class="container-fluid">
                 <img  class="nav-log" src="../img/logocirculo1.jpg" alt="">
@@ -74,6 +75,7 @@
                 <img src="../img/uña9.jpg" alt="uña9">
                 
             </article>
+            <!-- cards right -->
             <article class="card-body3">
                 <img src="../img/uña10.jpg" alt="uña10">
                 <img src="../img/uña11.jpg" alt="uña11">
@@ -85,8 +87,6 @@
                 <img src="../img/uña17.jpeg" alt="uña17">
             </article>
         </section>
-        <!-- cards right -->
-        <section class="cards3">
             
         </section>
 
