--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,6 +16,7 @@
     <!-- inicio de encabezado -->
 
     <header>
+        <!-- nav -->
         <nav class="navbar navbar-expand-md bg-personalizado f">
             <div class="container-fluid">
                 <img  class="nav-log" src="../img/logocirculo1.jpg" alt="">
