verificando los links

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav  pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="nails.html">Menú</a>
+                                <a class="nav-link" aria-current="page" href="index.html">Menú</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="pages/servicios.html">Servicios</a>
