agregue responsive a las paginas que me faltaban

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -62,9 +62,8 @@
 
     <main class="containerS">
         <!-- titulo-->
-        <h1 class="title">GAMA DE SERVICIOS</h1>
         
-
+        <h1 class="title">GAMA DE SERVICIOS</h1>
         <!-- 3 articulos -->
         <section class="cards">
             <article class="card-body">
@@ -88,12 +87,14 @@
         </section>
         <!-- cierre article-->
 
-
+    
         <!-- tips y consejos -->
+        <div class="noteh2">
+            <h2>Nuestro deseo es que pases un momento agradable cuando dejes tus manos en las de nuestros profesionales que están altamente capacitados para embellecer tus uñas, enseñarte a protegerlas y darte tips para cuidados especiales.</h2>
+        </div>
+
         <section class="note">
             <div class="box_note">
-                <h2>Nuestro deseo es que pases un momento agradable cuando dejes tus manos en las de nuestros profesionales que están altamente capacitados para embellecer tus uñas, enseñarte a protegerlas y darte tips para cuidados especiales.</h2>
-
                 <!-- 3 articulos -->
                 <section class="box_c">
                     <article class="card-body">
