agregue sass con sus respectivas carpetas, tambien utilice mixin

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- link a css -->
-    <link rel="stylesheet" href="css/sytle.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logocirculo.png" type="image/x-icon">
 
     <title>PriNails</title>
+    <meta name="description" content="En Pri Nails sabemos que las uñas son todo para vos! Amamos completar tu estilo y compartimos la sensación de felicidad que sentís cuando mirás tus manos y las ves perfectas🤍">
+    <meta name="keywords" content=" uñas,diseño de uñas, reserva, zona sur">
 </head>
 
 
@@ -29,7 +31,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end"  id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end bg-personalizado"  id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-body">
                         <ul class="navbar-nav  pe-3">
                             <li class="nav-item">
