--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,10 +6,12 @@
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- link a css -->
-    <link rel="stylesheet" href="../css/sytle.css">
+    <link rel="stylesheet" href="../css/style.css">
     <!-- favicon -->
     <link rel="shortcut icon" href="../img/logocirculo.png" type="image/x-icon">
     <title>Contacto</title>
+    <meta name="description" content="CONTÁCTANOS! estamos para ayudarte. En Pri Nails sabemos que las uñas son todo para vos">
+    <meta name="keywords" content=" uñas,diseño de uñas, reserva, contacto, zona sur">
 </head>
 <body>
 
@@ -23,7 +25,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end"  id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end bg-personalizado"  id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-body">
                         <ul class="navbar-nav  pe-3">
                             <li class="nav-item">
@@ -69,7 +71,7 @@
 
         <!-- texto -->
         <section class="titles">
-            <h3 class="title4">Pri Nails es un servicio estrategicamente pensado para tu practicidad y comodidad.</h3>
+            <h3 class="title4">Pri Nails es un servicio estratégicamente pensado para tu practicidad y comodidad.</h3>
             <p class="title3">⭐ WE LOVE NAILS ⭐</p>
         </section>
 
