--- a/index.html
+++ b/index.html
@@ -4,15 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- seo tags -->
+    <!-- Primary Meta Tags -->
+    <meta name="description" content="Un servicio estrategicamente pensado para que puedas tener tus manos impecables, siempre!" />
+    <meta name="keywords" content=" uñas,diseño de uñas, reserva, zona sur">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Pri Nails" />
+    <meta property="og:description" content="Un servicio estrategicamente pensado para que puedas tener tus manos impecables, siempre!" />
+    <meta property="og:image" content="img/logocirculo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Pri Nails" />
+    <meta property="twitter:description" content="Un servicio estrategicamente pensado para que puedas tener tus manos impecables, siempre!" />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+
+
     <!-- link bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- link a css -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/logocirculo.png" type="image/x-icon">
 
-    <title>PriNails</title>
-    <meta name="description" content="En Pri Nails sabemos que las uñas son todo para vos! Amamos completar tu estilo y compartimos la sensación de felicidad que sentís cuando mirás tus manos y las ves perfectas🤍">
-    <meta name="keywords" content=" uñas,diseño de uñas, reserva, zona sur">
 </head>
 
 
